--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <title>Document</title>
 </head>
 <body>  
+    <a href="https://cncnz.com/" title="cncnz"><img src="images/KanesWrath_Redeemer_10x7.jpg" /></a>
 </body>
 </html>
